--- a/Service4U/app/src/main/res/layout/activity_my_services.xml
+++ b/Service4U/app/src/main/res/layout/activity_my_services.xml
@@ -14,8 +14,7 @@
 
         <android.widget.LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
