--- a/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
+++ b/Service4U/app/src/main/res/layout/activity_availability_calendar.xml
@@ -11,20 +11,31 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="You will be unable to edit availability for times in the past or during which you are booked."
+            android:visibility="visible" />
+
         <CalendarView
             android:id="@+id/availabilityCal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:id="@+id/upcomingAvailabilityText"
-            style="?attr/textAppearanceListItem"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:isScrollContainer="true"
-            android:scrollbars="vertical" />
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/upcomingAvailabilityText"
+                style="?attr/textAppearanceListItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp" />
+        </ScrollView>
 
         <Button
             android:id="@+id/backToMyAccountBtn"
